# RAGI

./: Cargo.toml  imgui.ini
.github/workflows/: rust.yml
dir_resource/: Cargo.toml
dir_resource/src/: lib.rs  main.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
interpretter/: Cargo.toml
interpretter/src/: lib.rs
logic/: Cargo.toml
logic/src/: lib.rs  main.rs
objects/src/: lib.rs  main.rs
picture/: Cargo.toml
picture/src/: lib.rs  main.rs
ragi/: Cargo.toml
ragi/src/: main.rs
view/: Cargo.toml
view/src/: lib.rs  main.rs
volume/: Cargo.toml
volume/src/: lib.rs
words/src/: lib.rs  main.rs
