[package]
name = "interpretter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir_resource = {path = "../dir_resource"}
volume = {path = "../volume"}
logic = {path = "../logic"}
objects = {path = "../objects"}
words = {path = "../words"}
picture = {path = "../picture"}
view = {path = "../view"}
helpers = {path = "../helpers"}
fixed = "1.16"
rand = "0.8.5"
itertools = "0.10.3"
from-to-repr = "0.1.1"
serde = { version = "1.0.143" , features=["derive"] }
serde_arrays = "0.1.0"
bincode = "1.3.3"