[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir_resource = {path = "../dir_resource"}
volume = {path = "../volume"}
objects = {path = "../objects"}
words = {path = "../words"}
duplicate = "0.4.0"
tuple-arity = "0.1.2"
strum = "0.24.1"
strum_macros = "0.24.1"