[package]
name = "ragi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir_resource = {path = "../dir_resource"}
volume = {path = "../volume"}
helpers = {path = "../helpers"}
logic = {path = "../logic"}
objects = {path = "../objects"}
picture = {path = "../picture"}
view = {path = "../view"}
words = {path = "../words"}
interpretter = {path = "../interpretter"}
sdl2 = "0.35.2"
imgui = {version="0.8.2",features=["tables-api"] }
imgui-sdl2 = "0.15.0"
glow = "0.10.0"
imgui-glow-renderer = "0.8.2"